--- a/public/view/user.html
+++ b/public/view/user.html
@@ -10,7 +10,7 @@
 
 <body>
   <button id='user_join_btn'>user join</button>
-  <video id="videos" autoplay></video>
+  <video id="videos" autoplay muted playsInline></video>
 
   <script defer src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 
